# js-bsp-funtimes

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  webpack.config.js
js/app/: App.jsx  index.html  scene-manager.js
js/app/assets/images/: index.js
js/app/bsp/: bsp-node.js
js/app/components/: WebGL.jsx
js/app/models/: index.js  model-instance.js  model.factory.js  model.js  model.registry.js  texture.js  vector.js
js/app/services/: camera.service.js  light.service.js
js/app/shaders/: fragment.shader.js  shader.constants.js  vertex.shader.js
src/: bsp-node.js  index.js  plane.js  polygon.js  shapes.js
src/app/: App.jsx  index.html  index.js  scene-manager.js  scene-manager.service.js
src/app/assets/: primary.shader.hlsl
src/app/bsp/: bsp.js
src/app/components/: WebGL.jsx
src/app/models/: index.js  material.js  model-instance.js  model.factory.js  model.js  polygon.js  shape.factory.js  texture.js
src/app/services/: camera.service.js  mouse-listener.service.js  webgl-manager.service.js
src/app/shaders/: shader.service.js
src/app/utils/: csg-utility.service.js  index.js
src/bsp/: bsp-node.js  bsp.js  index.js  plane.js  polygon.js  vector.js  vertex.js
src/bsp/utils/: shapes.js
src/geometry/: hyper-plane.js  index.js  model.factory.js  polygon.js
src/utils/: csg-utility.service.js
tests/app/: index.html  webgl-viewer.service.js
